--- a/login.html
+++ b/login.html
@@ -6,6 +6,16 @@
     <title>rePlate - Save Food, Money, and Environment</title>
     <link rel="stylesheet" href="styles/login.css">
 </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>rePlate - Save Food, Money, and Environment</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/icons/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
+    
+    <link rel="stylesheet" href="styles/login.css">
 <body>
     <!-- Header/Navigation Section -->
     <header class="header">
