feat: background image at main section

--- a/login.html
+++ b/login.html
@@ -26,10 +26,10 @@
     </header>
 
     <!-- main section -->
-    <section class="hero">
+    <section class="hero" >
         <div class="hero-content">
             <div class="hero-text">
-                <h1>rePlate To <br>The Rescue!</h1>
+                <h1> <span  class="brand-name">rePlate</span> To <br>The Rescue!</h1>
                 <p>Replate is the place where you can save your tummy, save your money, and save your foody. So grab your seat and get some treat!</p>
             </div>
             
